Clean up InitialFlowWriterTest
Clean up mockito usage and use List.of() instead of
Collections.singletonList().

Change-Id: Ibf90a88fae66b2ec277760604e7321d976e361e0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>