@@ -7,16 +7,15 @@
  */
 package org.opendaylight.l2switch.arphandler.flow;
 
-import static org.mockito.Matchers.any;
-import static org.mockito.Mockito.times;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.timeout;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.util.Collections;
+import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 import org.opendaylight.mdsal.binding.api.DataObjectModification;
 import org.opendaylight.mdsal.binding.api.DataTreeIdentifier;
@@ -32,33 +31,30 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.inventory.rev130819.nodes.N
 import org.opendaylight.yangtools.yang.binding.InstanceIdentifier;
 
 public class InitialFlowWriterTest {
+    @Mock
+    private SalFlowService salFlowService;
+    @Mock
+    private DataTreeModification<Node> mockChange;
+    @Mock
+    private DataObjectModification<Node> mockModification;
 
-    @Mock private SalFlowService salFlowService;
     private InitialFlowWriter initialFlowWriter;
 
     @Before
-    public void initMocks() {
+    public void before() {
         MockitoAnnotations.initMocks(this);
         initialFlowWriter = new InitialFlowWriter(salFlowService);
     }
 
     @Test
     public void onDataChange_Valid() throws Exception {
-        InstanceIdentifier<Node> instanceId = InstanceIdentifier.builder(Nodes.class)
-                .child(Node.class, new NodeKey(new NodeId("openflow:1")))
-                .build();
-        Node topoNode = new NodeBuilder().setId(new NodeId("openflow:1")).build();
-
-        DataTreeModification<Node> mockChange = Mockito.mock(DataTreeModification.class);
-        DataObjectModification<Node> mockModification = Mockito.mock(DataObjectModification.class);
-        when(mockModification.getDataAfter()).thenReturn(topoNode);
+        when(mockModification.getDataAfter()).thenReturn(new NodeBuilder().setId(new NodeId("openflow:1")).build());
         when(mockModification.getModificationType()).thenReturn(DataObjectModification.ModificationType.WRITE);
         when(mockChange.getRootPath()).thenReturn(DataTreeIdentifier.create(LogicalDatastoreType.CONFIGURATION,
-                instanceId));
+            InstanceIdentifier.builder(Nodes.class).child(Node.class, new NodeKey(new NodeId("openflow:1"))).build()));
         when(mockChange.getRootNode()).thenReturn(mockModification);
 
-        initialFlowWriter.onDataTreeChanged(Collections.singletonList(mockChange));
-        Thread.sleep(250);
-        verify(salFlowService, times(1)).addFlow(any(AddFlowInput.class));
+        initialFlowWriter.onDataTreeChanged(List.of(mockChange));
+        verify(salFlowService, timeout(500)).addFlow(any(AddFlowInput.class));
     }
 }
